Closed Bug 378693 Opened 17 years ago Closed 17 years ago

[FIX]###!!! ASSERTION: Should have found a parent before this: 'aProspectiveParent->GetStyleContext()->GetPseudoType() == nsCSSAnonBoxes::viewportScroll', file nsFrame.cpp, line 5531

Categories

(Core :: Layout, defect, P2)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha4

People

(Reporter: MatsPalmgren_bugz, Assigned: bzbarsky)

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

STEPS TO REPRODUCE
1. load the attached testcase

ACTUAL RESULT
###!!! ASSERTION: Should have found a parent before this: 'aProspectiveParent->GetStyleContext()->GetPseudoType() == nsCSSAnonBoxes::viewportScroll', file nsFrame.cpp, line 5531

PLATFORMS AND BUILDS TESTED
Linux debug builds
Attached file Testcase #1
Attached patch Proposed fixSplinter Review
Basic idea is to make sure to give the root a null style context parent.  We were screwing it up.

The other hunk is because in a non-scrolling document we could have other frame parents for the root.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #262719 - Flags: superreview?(roc)
Attachment #262719 - Flags: review?(roc)
Priority: -- → P2
Summary: ###!!! ASSERTION: Should have found a parent before this: 'aProspectiveParent->GetStyleContext()->GetPseudoType() == nsCSSAnonBoxes::viewportScroll', file nsFrame.cpp, line 5531 → [FIX]###!!! ASSERTION: Should have found a parent before this: 'aProspectiveParent->GetStyleContext()->GetPseudoType() == nsCSSAnonBoxes::viewportScroll', file nsFrame.cpp, line 5531
Target Milestone: --- → mozilla1.9alpha4
Attachment #262719 - Flags: superreview?(roc)
Attachment #262719 - Flags: superreview+
Attachment #262719 - Flags: review?(roc)
Attachment #262719 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: