Resolve the right (parentless) style context for a table as a document root,and fix the assertion when adjusting parent style context frames to not triggerin non-scrollable documents.  Bug 378693, r+sr=roc